--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#91F8AB">
+    android:background="#49E637">
 
     <ScrollView
         android:id="@+id/scrollView3"
@@ -28,10 +28,11 @@
                     android:textColor="#FF0000"
                     android:textSize="10sp"
                     android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="@+id/textView16"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.915"
                     app:layout_constraintStart_toEndOf="@+id/textView16"
-                    tools:layout_editor_absoluteY="497dp"
+                    app:layout_constraintTop_toTopOf="@+id/textView16"
                     tools:ignore="MissingConstraints" />
 
                 <TextView
@@ -264,7 +265,7 @@
                         tools:ignore="DuplicateIds" />
                 </LinearLayout>
 
-                <LinearLayout
+<!--                <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="0.2"
@@ -288,7 +289,7 @@
                         android:textColor="#676767"
                         android:textSize="12sp"
                         tools:ignore="DuplicateIds" />
-                </LinearLayout>
+                </LinearLayout>-->
 
                 <LinearLayout
                     android:layout_width="0dp"
